# api-gateway/api/handlers/searchhandlers/get_active_filters.go
@@ -17,7 +17,7 @@ import (
 // @Success 200 {object} []search.Filter "List of active filters"
 // @Failure 400 {string} string "Invalid request or failed to process the response"
 // @Failure 403 {string} string "Forbidden - context creation failed"
-// @Router /filters/active [get]
+// @Router /search/filters [get]
 // @Security LogisticAuth
 func GetActiveFiltersHandler(logger goatlogger.Logger, searchClient *search.Client) goathttp.Handler {
 	return func(w http.ResponseWriter, r *http.Request) {
